--- a/quiz.html
+++ b/quiz.html
@@ -364,6 +364,189 @@ answers: ["10", "12", "20", "24"],
 correctAnswerIndex: 1
 },
 
+{
+question: "What bird was used to carry messages in WW1?",
+answers: ["Arctic Tern", "Sparrow", "Pigeon", "Magpie"],
+correctAnswerIndex: 2
+},
+
+{
+question: "Who was the first emperor of Rome?",
+answers: ["Julius Caesar", "Augustus", "Nero", "Caligula"],
+correctAnswerIndex: 1
+},
+	
+{
+question: "What was the name of the first American president?",
+answers: ["Thomas Jefferson", "George Washington", "John Adams", "Abraham Lincoln"],
+correctAnswerIndex: 1
+},
+	
+{
+question: "What was the name of the ship that Charles Darwin sailed on during his voyage of discovery?",
+answers: ["The Beagle", "The Endeavour", "The Discovery", "The Titanic"],
+correctAnswerIndex: 0
+},
+	
+{
+question: "What was the name of the first human to travel into space?",
+answers: ["Yuri Gagarin", "Neil Armstrong", "Buzz Aldrin", "Alan Shepard"],
+correctAnswerIndex: 0
+},
+	
+{
+question: "Who was the founder of the Mongol Empire?",
+answers: ["Genghis Khan", "Kublai Khan", "Attila the Hun", "Tamerlane"],
+correctAnswerIndex: 0
+},
+	
+{
+question: "What was the name of the battle that marked the end of Napoleon's reign?",
+answers: ["The Battle of Austerlitz", "The Battle of Waterloo", "The Battle of Borodino", "The Battle of Leipzig"],
+correctAnswerIndex: 1
+},
+	
+{
+question: "What was the name of the ancient Greek philosopher who taught Alexander the Great?",
+answers: ["Socrates", "Aristotle", "Plato", "Epicurus"],
+correctAnswerIndex: 1
+},
+	
+{
+question: "What was the name of the first English colony in America?",
+answers: ["Jamestown", "Plymouth", "Roanoke", "Boston"],
+correctAnswerIndex: 2
+},
+	
+{
+question: "Who was the first person to circumnavigate the globe?",
+answers: ["Christopher Columbus", "Ferdinand Magellan", "Vasco da Gama", "Marco Polo"],
+correctAnswerIndex: 1
+},
+	
+{
+question: "What was the name of the British general who surrendered at Yorktown, effectively ending the American Revolutionary War?",
+answers: ["William Howe", "Charles Cornwallis", "John Burgoyne", "Thomas Gage"],
+correctAnswerIndex: 1
+},
+	
+{
+question: "Who was the leader of the Soviet Union during World War II?",
+answers: ["Joseph Stalin", "Vladimir Lenin", "Nikita Khrushchev", "Mikhail Gorbachev"],
+correctAnswerIndex: 0
+},
+	
+{
+question: "What was the name of the battle in which William the Conqueror defeated King Harold II of England?",
+answers: ["The Battle of Agincourt", "The Battle of Hastings", "The Battle of Bannockburn", "The Battle of Bosworth Field"],
+correctAnswerIndex: 1
+},
+	
+{
+question: "What was the name of the treaty that ended the First World War?",
+answers: ["The Treaty of Versailles", "The Treaty of Brest-Litovsk", "The Treaty of Trianon", "The Treaty of Saint-Germain-en-Laye"],
+correctAnswerIndex: 0
+},
+	
+{
+question: "Who was the first European explorer to reach India by sea?",
+answers: ["Christopher Columbus", "Ferdinand Magellan", "Vasco da Gama", "Marco Polo"],
+correctAnswerIndex: 2
+},
+	
+{
+question: "What was the name of the first woman to win a Nobel Prize?",
+answers: ["Marie Curie", "Florence Nightingale", "Rosalind Franklin", "Dorothy Hodgkin"],
+correctAnswerIndex: 0
+},
+	
+{
+question: "In what year did Christopher Columbus first set foot in the New World?",
+answers: ["1492", "1501", "1512", "1520"],
+correctAnswerIndex: 0
+},
+	
+{
+question: "What was the name of the first successful powered airplane, built by the Wright brothers?",
+answers: ["The Flyer", "The Spirit of St. Louis", "The Red Baron", "The Blackbird"],
+correctAnswerIndex: 0
+},
+	
+{
+question: "Who was the first person to sail around the world solo?",
+answers: ["Christopher Columbus", "Ferdinand Magellan", "Francis Drake", "Joshua Slocum"],
+correctAnswerIndex: 3
+},
+	
+{
+question: "What was the name of the ancient Greek philosopher who wrote 'The Republic'?",
+answers: ["Socrates", "Plato", "Aristotle", "Epicurus"],
+correctAnswerIndex: 1
+},
+	
+{
+question: "What was the name of the medieval queen who led the French army to victory against the English during the Hundred Years' War?",
+answers: ["Elizabeth I", "Queen Victoria", "Catherine the Great", "Joan of Arc"],
+correctAnswerIndex: 3
+},
+	
+{
+question: "What was the name of the first man to walk on the moon?",
+answers: ["Neil Armstrong", "Buzz Aldrin", "Yuri Gagarin", "Alan Shepard"],
+correctAnswerIndex: 0
+},
+	
+{
+question: "Who was the first president of the United States to be impeached?",
+answers: ["Andrew Johnson", "Bill Clinton", "Richard Nixon", "Donald Trump"],
+correctAnswerIndex: 0
+},
+	
+{
+question: "What was the name of the American general who commanded the Allied forces in Europe during World War II?",
+answers: ["Dwight D. Eisenhower", "George S. Patton", "Omar Bradley", "Douglas MacArthur"],
+correctAnswerIndex: 0
+},
+	
+{
+question: "What was the name of the first emperor of China?",
+answers: ["Mao Zedong", "Sun Yat-sen", "Kangxi", "Qin Shi Huang"],
+correctAnswerIndex: 3
+},
+	
+{
+question: "What was the name of the famous Egyptian queen who was the last pharaoh of ancient Egypt?",
+answers: ["Cleopatra", "Nefertiti", "Hatshepsut", "Isis"],
+correctAnswerIndex: 0
+},
+	
+{
+question: "What was the name of the famous Roman general who crossed the Alps with his army and invaded Italy?",
+answers: ["Julius Caesar", "Hannibal Barca", "Scipio Africanus", "Augustus"],
+correctAnswerIndex: 1
+},
+	
+{
+question: "What was the name of the Russian monk who founded the Russian Orthodox Church?",
+answers: ["St. Sergius of Radonezh", "St. Cyril", "St. Basil the Great", "St. Gregory Palamas"],
+correctAnswerIndex: 0
+},
+	
+{
+question: "Who was the first U.S. president to visit China?",
+answers: ["Richard Nixon", "Jimmy Carter", "Ronald Reagan", "Bill Clinton"],
+correctAnswerIndex: 0
+},
+	
+{
+question: "What was the name of the famous philosopher who wrote 'The Analects' and lived in ancient China?",
+answers: ["Confucius", "Lao Tzu", "Bodhidharma", "Zhuangzi"],
+correctAnswerIndex: 0
+},
+
+
+
+
 ];
 
 let currentQuestionIndex;
