--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
   <div id="contact" class="w3-container w3-padding-large" style="margin-bottom:32px">
   
     <!-- Contact Section -->
-  <iframe allowtransparency="true" src="https://www.formpl.us/form/6718927386312704" frameborder="0" style="width:100%; height:600px; border:50px;" scrolling="yes"></iframe>
+  <iframe src="fpls.in/3b6rvgspls" style="width:100%; height:600px; border:none;" scrolling="yes"></iframe>
     </div>
   <!-- Footer -->
 
