--- a/index.html
+++ b/index.html
@@ -133,7 +133,6 @@
         <p>Fun quiz with score counter.</p> </a>
       </div>
     </div>
-    </div>
  
     <div class="w3-third w3-container w3-margin-bottom">
       <a href="simonsays.html"> <img src="https://freesimon.org/images/simon-game-card.png" alt="Simon Says" class="w3-hover-opacity" style="width:100%" </a>
@@ -142,20 +141,21 @@
         <p>Beat your old score!</p>
       </div>
     </div>
-  </div>
   
   
-  <!-- 
+  
 
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
-      <a href="moneyclicker.html"> <img src="https://d1e00ek4ebabms.cloudfront.net/production/6b7c5fa6-b824-4430-b544-2102ad555fd1.jpg" alt="Money clicker" class="w3-hover-opacity" style="width:100%" </a>
+      <a href="wouldyourather.html"> <img src="https://d1e00ek4ebabms.cloudfront.net/production/6b7c5fa6-b824-4430-b544-2102ad555fd1.jpg" alt="Money clicker" class="w3-hover-opacity" style="width:100%" </a>
       <div class="w3-container w3-white">
 
-        <a href="moneyclicker.html" <p></p><b>Money Clicker!</b></p><a>
-        <p>Like cookieclicker, but for money!</p>
+        <a href="wouldyourather.html" <p></p><b>Would you rather?</b></p><a>
+        <p>Choose between two different extremes!</p>
       </div>
     </div>
+    </div>
+    <!-- DONT FORGET TO REMOVE DIV OR ADD DIV WHEN DOING NEXT
     <div class="w3-row-padding">
       <div class="w3-third w3-container w3-margin-bottom">
         <a href="quiz.html"> <img src="https://53.fs1.hubspotusercontent-na1.net/hub/53/hubfs/google-quiz.jpg?width=595&height=400&name=google-quiz.jpg" alt="Quiz" class="w3-hover-opacity" style="width:100%" </a>
