--- a/wouldyourather.html
+++ b/wouldyourather.html
@@ -15,8 +15,7 @@
           <button id="nextBtn" onclick="nextQuestion()">Next Question</button>
         </div>
       </div>
-      
-
+      <a href="mailto:redadmiral1118@gmail.com?subject=Would you rather ideas!%20Line&body=Body%20Text">Please do not hesitate to contact me at redadmiral1118@gmail.com to suggest more would you rathers!</a>
     <style>
 
 .container {
@@ -145,6 +144,7 @@ function nextQuestion() {
 'Would you rather have the power of regeneration or the power of shape-shifting?',
 'Would you rather live in a world with only one season or with constantly changing seasons?',
 'Would you rather have the power of super intelligence or the power of extreme physical endurance?',
+'Would you rather be peppersprayed or be tased?',
   ];
   const randomIndex = Math.floor(Math.random() * questions.length);
   const randomQuestion = questions[randomIndex];
