--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
-      <a href="wouldyourather.html"> <img src="https://d1e00ek4ebabms.cloudfront.net/production/6b7c5fa6-b824-4430-b544-2102ad555fd1.jpg" alt="Money clicker" class="w3-hover-opacity" style="width:100%" </a>
+      <a href="wouldyourather.html"> <img src="https://m.media-amazon.com/images/W/IMAGERENDERING_521856-T1/images/I/41SuRktCEuL._SX331_BO1,204,203,200_.jpg" alt="Money clicker" class="w3-hover-opacity" style="width:100%" </a>
       <div class="w3-container w3-white">
 
         <a href="wouldyourather.html" <p></p><b>Would you rather?</b></p><a>
