--- a/wouldyourather.html
+++ b/wouldyourather.html
@@ -15,9 +15,9 @@
           <button id="nextBtn" onclick="nextQuestion()">Next Question</button>
         </div>
       </div>
-      <centre>
+      <center>
       <a href="mailto:redadmiral1118@gmail.com?subject=Would you rather ideas!%20">Please do not hesitate to contact me at redadmiral1118@gmail.com to suggest more would you rathers!</a>
-    </centre>
+    </center>
     <style>
 
 .container {
