--- a/fakeupdate.html
+++ b/fakeupdate.html
@@ -13,6 +13,7 @@
     <body>
 
 <a href="windows10update.html">Fake Windows 10 Update Screen</a>
+<a href="appleupdate.html">Fake Apple Update Screen</a>
 
     </body>
     </html>
