--- a/panic.html
+++ b/panic.html
@@ -1,3 +1,5 @@
+<html>
+
 <head>
     <meta name="apple-mobile-web-app-capable" content="yes">
     <script src="https://code.jquery.com/jquery-latest.js"></script>
@@ -117,3 +119,5 @@
     </div>
     
     </body>
+
+</html>
