--- a/windows10update.html
+++ b/windows10update.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>PRANK: Update Screen</title>
+  <title>Update Screen</title>
   <meta name="robots" content="index, follow">
   <meta name="googlebot" content="index, follow">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,7 +11,7 @@
   <meta property="og:image:width" content="200">
   <meta property="og:image:height" content="113">
   <meta name="classification" content="Novelty">
-  <meta property="og:title" content="fakeupdate.net - Updating Windows 10">
+  <meta property="og:title" content="Updating Windows 10">
   <meta property="og:url" content="http://fakeupdate.net">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <script async="" src="//www.google-analytics.com/analytics.js"></script><script src="https://code.jquery.com/jquery-latest.js"></script>
