--- a/map.html
+++ b/map.html
@@ -121,7 +121,7 @@ function getDirections(event) {
         axios
           .get("https://api.openrouteservice.org/v2/directions/driving-car", {
             params: {
-              api_key: "your-api-key-here",
+              api_key: "5b3ce3597851110001cf624819be4fd3e2a047d5bc532f872a3da1a5",
               start: `${startResult.lon},${startResult.lat}`,
               end: `${endResult.lon},${endResult.lat}`,
             },
