--- a/bsod.html
+++ b/bsod.html
@@ -24,7 +24,7 @@
     <p style="font-size:100pt; margin:0; padding-bottom:20pt">:(</p>
     <p style="font-size:20pt; margin:0; padding:0">Your PC ran into a problem and needs to restart. We're just<br>collecting some error info, and then we'll restart for you.</p>
     <br>Restart your PC manually<br><br>
-    <img src="qrcode.svg" style="float:left;">
+    <img src="qrcode.svg" style="float:left;width:50%;">
     <div style="float:left;margin-left:20px;width:50%;">
     <p style="font-size:14pt; color:#fff; margin-top:-30px; padding:0;line-height:32px;"><br>For more information about this issue and<br>possible fixes, visit<br>http://windows.com/stopcode<br><br>If you call a support person, give them this info:<br>Stop Code: SYS_EXCEPTION_PONIES_NOT_HANDLED</p>
     </div>
