--- a/index.html
+++ b/index.html
@@ -180,7 +180,9 @@
   <div id="contact" class="w3-container w3-padding-large" style="margin-bottom:32px">
   
     <!-- Contact Section -->
-
+<div>
+  
+</div>
     
     
   <!-- Footer -->
