--- a/emoji.html
+++ b/emoji.html
@@ -127,10 +127,11 @@ main {
     <div id="blue-button" class="colour-box blue"></div>
   </div>
   <div id="secondary-container">
-    <div onclick="copyImage()" class="lg-colour-box secondary"></div>
+    <div class="lg-colour-box secondary"></div>
   </div>
 
-
+<!-- A button to trigger the copy action -->
+<button onclick="copyImage()">Copy Image</button>
   
 <script>
   function copyImage() {
