--- a/emoji.html
+++ b/emoji.html
@@ -157,12 +157,12 @@ let yellowSelected = false;
 let blueSelected = false;
 
 const whiteArray = ['👻', '👀', '☁️', '🍚', '🥚', '🥛', '🏐', '🗯', '🏳️', '🤍'];
-const redArray = ['❤️', '👹', '💋', '💃', '🍎', '🌶', '🚘', '🌹', '🥵', '😡'];
-const yellowArray = ['🌝', '🐥', '🍋', '🧀', '🚜', '💛', '📒', '👂', '😎', '😐', '😴'];
-const blueArray = ['👕', '🦋', '🐬', '💦', '🚙', '💎', '💙', '❄️', '😰', '☄️'];
+const redArray = ['❤️', '👹', '💋', '💃', '🍎', '🌶', '🌹', '🥵', '😡'];
+const yellowArray = ['🌝', '🐥', '🍋', '🧀', '💛', '📒', '👂', '😎', '😐', '😴'];
+const blueArray = ['🐬', '💦', '💎', '💙', '❄️', '😰', '☄️', '📘', '🐋'];
 const orangeArray = ['🎃', '🦁', '🦀', '🍊', '🏀', '📙', '🧡', '🥕', '🦧'];
-const purpleArray = ['😈', '👾', '☂️', '🍆', '🍇', '🔮', '💜', '🕺', '🔮'];
-const greenArray = ['🤢', '🐸', '🦖', '🍀', '🍏', '🎾', '💚', '🥒', '📗'];
+const purpleArray = ['👾', '☂️', '🍆', '🍇', '🔮', '💜', '🕺', '🔮'];
+const greenArray = ['🤢', '🐸', '🍀', '🍏', '🎾', '💚', '🥒', '📗'];
 
 function toggleButton(button, selected) {
   button.addEventListener('click', () => {
