--- a/emoji.html
+++ b/emoji.html
@@ -143,7 +143,7 @@ let redSelected = false;
 let yellowSelected = false;
 let blueSelected = false;
 
-const whiteArray = ['👻', '👀', '☁️', '🍚', '🥚', '🥛', '🏐', '🗯', '🏳️', '🤍'];
+const whiteArray = ['👻', '👀', '☁️', '🍚', '🥚', '🥛', '🏐', '🏳️', '🤍'];
 const redArray = ['❤️', '👹', '💋', '💃', '🍎', '🌶', '🌹', '🥵', '😡'];
 const yellowArray = ['🌝', '🐥', '🍋', '🧀', '💛', '📒', '👂', '😎', '😐', '😴'];
 const blueArray = ['🐬', '💦', '💎', '💙', '❄️', '😰', '☄️', '📘', '🐋'];
