--- a/wouldyourather.html
+++ b/wouldyourather.html
@@ -17,7 +17,7 @@
       </div>
       <br><br>
       <center>
-      <a href="mailto:redadmiral1118@gmail.com?subject=Would you rather ideas!%20">Please do not hesitate to contact me at redadmiral1118@gmail.com to suggest more would you rathers!</a>
+      <a href="mailto:hello@thelostdocs.com?subject=Would you rather ideas!%20">Please do not hesitate to contact me at hello@thelostdocs.com to suggest more would you rathers!</a>
     </center>
     <style>
 
