--- a/index.html
+++ b/index.html
@@ -181,13 +181,14 @@
   
     <!-- Contact Section -->
 <div>
-  
+  <a href="mailto:hello@thelostdocs.com?subject=Hello!%20">Please do not hesitate to contact me at redadmiral1118@gmail.com to suggest, chat or ask anything like coding questions etc!</a>
+  <a href="mailto:jobs@thelostdocs.com?subject=My application%20">Apply at jobs@thelostdocs.com to become a dev here!</a>
 </div>
     
     
   <!-- Footer -->
 
-  <div class="w3-black w3-center w3-padding-24">Made by NicoWebCreations</div>
+  <div class="w3-black w3-center w3-padding-24">Made by NicoDev<i>Formerly know as NicoWebCreations</i> <a href="mailto:websites@thelostdocs.com?subject=Build me a website!%20">Contact websites@thelostdocs.com to get your website built!</a></div>
 
 <!-- End page content -->
 </div>
