--- a/index.html
+++ b/index.html
@@ -181,8 +181,10 @@
   
     <!-- Contact Section -->
 <div>
-  <a href="mailto:hello@thelostdocs.com?subject=Hello!%20">Please do not hesitate to contact me at redadmiral1118@gmail.com to suggest, chat or ask anything like coding questions etc!</a>
-  <a href="mailto:jobs@thelostdocs.com?subject=My application%20">Apply at jobs@thelostdocs.com to become a dev here!</a>
+  <h1>Contact</h1>
+  <a href="mailto:hello@thelostdocs.com?subject=Hello!%20"><h3>Please do not hesitate to contact me at redadmiral1118@gmail.com to suggest, chat or ask anything like coding questions etc!</h3></a>
+  <br>
+  <a href="mailto:jobs@thelostdocs.com?subject=My application%20"><h3>Apply at jobs@thelostdocs.com to become a dev here!</h3></a>
 </div>
     
     
