--- a/index.html
+++ b/index.html
@@ -190,8 +190,9 @@
     
   <!-- Footer -->
 
-  <div class="w3-black w3-center w3-padding-24">Made by NicoDev<i>Formerly know as NicoWebCreations</i> <a href="mailto:websites@thelostdocs.com?subject=Build me a website!%20">Contact websites@thelostdocs.com to get your website built!</a></div>
-
+  <div class="w3-black w3-center w3-padding-24">Made by NicoDev &nbsp; <a href="mailto:websites@thelostdocs.com?subject=Build me a website!%20">Contact websites@thelostdocs.com to get your website built!</a></div>
+<br>
+  <i>Formerly know as NicoWebCreations</i>
 <!-- End page content -->
 </div>
 
