--- a/index.html
+++ b/index.html
@@ -182,9 +182,9 @@
     <!-- Contact Section -->
 <div>
   <h1>Contact</h1>
-  <a href="mailto:hello@thelostdocs.com?subject=Hello!%20"><h3>Please do not hesitate to contact me at redadmiral1118@gmail.com to suggest, chat or ask anything like coding questions etc!</h3></a>
+<h4>Please do not hesitate to contact me at &nbsp;</h4> <a href="mailto:hello@thelostdocs.com?subject=Hello!%20"><h4>redadmiral1118@gmail.com</h4></a><h4>&nbsp; to suggest, chat or ask anything like coding questions etc!</h4>
   <br>
-  <a href="mailto:jobs@thelostdocs.com?subject=My application%20"><h3>Apply at jobs@thelostdocs.com to become a dev here!</h3></a>
+<h4>Apply at</h4>&nbsp; <a href="mailto:jobs@thelostdocs.com?subject=My application%20"><h4>jobs@thelostdocs.com</h4></a><h4>&nbsp; to become a dev here!</h4>
 </div>
     
     
