--- a/index.html
+++ b/index.html
@@ -190,9 +190,8 @@
     
   <!-- Footer -->
 
-  <div class="w3-black w3-center w3-padding-24">Made by NicoDev &nbsp; <a href="mailto:websites@thelostdocs.com?subject=Build me a website!%20">Contact websites@thelostdocs.com to get your website built!</a></div>
-<br>
-  <i>Formerly know as NicoWebCreations</i>
+  <div class="w3-black w3-center w3-padding-24">Made by NicoDev &nbsp; Contact <a href="mailto:websites@thelostdocs.com?subject=Build me a website!%20">websites@thelostdocs.com</a>&nbsp; to get your website built!</div>
+
 <!-- End page content -->
 </div>
 
