--- a/index.html
+++ b/index.html
@@ -182,9 +182,9 @@
     <!-- Contact Section -->
 <div>
   <h1>Contact</h1>
-<h4>Please do not hesitate to contact me at &nbsp;</h4> <a href="mailto:hello@thelostdocs.com?subject=Hello!%20"><h4>redadmiral1118@gmail.com</h4></a><h4>&nbsp; to suggest, chat or ask anything like coding questions etc!</h4>
+<h4>Please do not hesitate to contact me at</h4> <a href="mailto:hello@thelostdocs.com?subject=Hello!%20"><h4>redadmiral1118@gmail.com</h4></a><h4>to suggest, chat or ask anything like coding questions etc!</h4>
   <br>
-<h4>Apply at</h4>&nbsp; <a href="mailto:jobs@thelostdocs.com?subject=My application%20"><h4>jobs@thelostdocs.com</h4></a><h4>&nbsp; to become a dev here!</h4>
+<h4>Apply at</h4><a href="mailto:jobs@thelostdocs.com?subject=My application%20"><h4>jobs@thelostdocs.com</h4></a><h4>to become a dev here!</h4>
 </div>
     
     
