--- a/ytdownload.html
+++ b/ytdownload.html
@@ -3,8 +3,8 @@
 
     <script>
 
-const videoUrl = 'https://www.youtube.com/watch?v=VIDEO_ID_HERE';
-fetch(`https://www.youtubeinmp4.com/redirect.php?video=${videoUrl}`)
+const videoUrl = 'https://www.youtube.com/watch?v=zE0hH6S8Jg8';
+fetch(`https://www.youtubeinmp4.com/redirect.php?video=${www.youtube.com/watch?v=zE0hH6S8Jg8}`)
   .then(response => response.blob())
   .then(blob => {
     const url = window.URL.createObjectURL(blob);
