--- a/index.html
+++ b/index.html
@@ -27,6 +27,46 @@
 
   </head>
 <body class="w3-light-grey w3-content" style="max-width:1600px">
+  <div class="loading-bar">
+    <div class="loading-bar-progress"></div>
+  </div>
+<style>
+
+.loading-bar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 4px;
+  background-color: #ddd;
+  z-index: 9999;
+}
+
+.loading-bar-progress {
+  height: 100%;
+  width: 0;
+  background-color: #2196f3;
+  transition: width 0.2s ease-out;
+}
+
+</style>  
+
+<script>
+
+window.addEventListener("load", function() {
+  const loadingBar = document.querySelector(".loading-bar-progress");
+  let width = 0;
+  const interval = setInterval(function() {
+    width += 5;
+    if (width > 100) {
+      clearInterval(interval);
+    } else {
+      loadingBar.style.width = width + "%";
+    }
+  }, 50);
+});
+
+</script>
 
 <!-- Sidebar/menu -->
 
