--- a/congratsonsuccess.html
+++ b/congratsonsuccess.html
@@ -22,7 +22,7 @@ body {
 <center>
 <h1>Congrats! You just got a giftcard!</h1>
 <p>For a chance to get an Amazon gift card, contact <a href="mailto:competition@thelostdocs.com?I WON!!!%20">competition@thelostdocs.com</a> with the PIN you used and this string of characters to prove it: <i>Bt5%w8£</i></p>
-<h4><i> This is not a scam and is legit. We will not ask for personal information. If you would prefer not to send an email, please submit a contact form with the details.
+<h4><i> This is not a scam and is legit. We will not ask for personal information.</i></h4>
 </center>
 
 </body>
