--- a/guesscode.html
+++ b/guesscode.html
@@ -32,7 +32,14 @@
   Enter Code! <input type="password" required id="pass1" maxlength="4" type="tel">
   <input type="submit">
 <br>
-<br>
+<p>Clue: Four digits I have, each one unique,
+  My order is important, don't mis-speak.
+  I am even and divisible by four,
+  Yet to unlock my mystery, you'll need much more.
+  My last two digits are both perfect squares,
+  But beware, the answer is not yet there.
+Help: 1 line of the riddle is incorrect.
+</p>
 <br>
 <hr>
 <br>
