--- a/guesscode.html
+++ b/guesscode.html
@@ -39,8 +39,9 @@
   My order is important, don't mis-speak.
   I am even and divisible by four,
   Yet to unlock my mystery, you'll need much more.
-  My last two digits are both perfect squares,
+  My last digit is a perfect square,
   But beware, the answer is not yet there.
+  <br>
 Help: 1 line of the riddle is incorrect.
 </p>
 <br>
