--- a/congratsonsuccess.html
+++ b/congratsonsuccess.html
@@ -21,7 +21,7 @@ body {
   <a href="index.html" ><img src="logo.png" width="150px" height="auto" style="float: left;"> </img></a>
 <center>
 <h1>Congrats! You just got a giftcard!</h1>
-<p>For a chance to get an Amazon gift card, contact <a href="mailto:competition@thelostdocs.com?I WON!!!%20">competition@thelostdocs.com</a> with the PIN you used and this string of characters to prove it: <i>Bt5%w8£</i></p>
+<p>For a chance to get an Amazon gift card, contact <a href="mailto:redadmiral1118@gmail.com?I WON!!!%20">redadmiral1118@gmail.com</a> with the PIN you used and this string of characters to prove it: <i>Bt5%w8£</i></p>
 <h4><i> This is not a scam and is legit. We will not ask for personal information.</i></h4>
 </center>
 
