--- a/index.html
+++ b/index.html
@@ -187,7 +187,12 @@
 <h4>Apply at</h4><a href="mailto:jobs@thelostdocs.com?subject=My application%20"><h4>jobs@thelostdocs.com</h4></a><h4>to become a dev here!</h4>
 </div>
     
-    
+<!-- TrustBox widget - Micro Review Count -->
+<div class="trustpilot-widget" data-locale="en-GB" data-template-id="5419b6a8b0d04a076446a9ad" data-businessunit-id="64314c7326e69b18a5e17ccb" data-style-height="24px" data-style-width="100%" data-theme="light" data-min-review-count="10" data-style-alignment="center">
+  <a href="https://uk.trustpilot.com/review/thelostdocs.com" target="_blank" rel="noopener">Trustpilot</a>
+</div>
+<!-- End TrustBox widget -->    
+
   <!-- Footer -->
 
   <div class="w3-black w3-center w3-padding-24">Made by NicoDev &nbsp; Contact <a href="mailto:websites@thelostdocs.com?subject=Build me a website!%20">websites@thelostdocs.com</a>&nbsp; to get your website built!</div>
