--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     </style>
 
+<meta name="wot-verification" content="c70b338eda6aac85f844"/>
+
   </head>
 <body class="w3-light-grey w3-content" style="max-width:1600px">
 
