--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 
 <meta name="wot-verification" content="c70b338eda6aac85f844"/>
 
+<meta name="a.validate.02" content="OAaR0kf6RObYWvdedn3OUXYXvr_imzBcanZ8" />
+
   </head>
 <body class="w3-light-grey w3-content" style="max-width:1600px">
 
