--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ function w3_close() {
 
 <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="thelostdocscom" data-description="Support me on Buy me a coffee!" data-message="Donations would be appreciated to keep this site running!" data-color="#40DCA5" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
 
-
+<!--cash ads ad script-->
 <script data-cfasync="false" type="text/javascript" src="//geniusdexchange.com/a/display.php?r=6914234"></script>
 </body>
 </html>
