--- a/spendit.html
+++ b/spendit.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
 
-    <title>Spend Sashoti's bitcoin!</title>
+    <title>Spend Satoshi's bitcoin!</title>
     <meta charset="UTF-8">
         <meta name="description" content="A site to do random stuff if you're bored">
         <meta name="keywords" content="fun, neal.fun, boredbutton, bored, have fun,">
