--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
 
 <meta name="a.validate.02" content="OAaR0kf6RObYWvdedn3OUXYXvr_imzBcanZ8" />
 
+<!--Hilltop ads-->
+
+<meta name="df74f594c0fe7dbcc850a1c04143e8d790c379ef" content="df74f594c0fe7dbcc850a1c04143e8d790c379ef" />
+
   </head>
 <body class="w3-light-grey w3-content" style="max-width:1600px">
 
