--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
 
 <meta name="a.validate.02" content="OAaR0kf6RObYWvdedn3OUXYXvr_imzBcanZ8" />
 
+<!--clickadu-->
+
+<meta name="clckd" content="a84fc69f184a43001aa3e7a0b33a2f8a" />
+
+
 <!--Hilltop ads-->
 
 <meta name="df74f594c0fe7dbcc850a1c04143e8d790c379ef" content="df74f594c0fe7dbcc850a1c04143e8d790c379ef" />
