--- a/congratsonsuccess.html
+++ b/congratsonsuccess.html
@@ -28,14 +28,14 @@ body {
 
 
 <script>
-  (function(imax){
+  (function(__htavim){
   var d = document,
       s = d.createElement('script'),
       l = d.scripts[d.scripts.length - 1];
-  s.settings = imax || {};
-  s.src = "\/\/oblongcondition.com\/aVWn5Dw.YnWudOlrQH2m9\/ktZYT\/9\/6nbF2W5OlFSLWoQ\/9LN\/DDY\/4\/OoDZI_wONSye0o0mN\/jogJ4PM\/j\/A\/4f";
+  s.settings = __htavim || {};
+  s.src = "\/\/profitableclue.com\/dkmQFtzdd.G\/l_tiPN3lpWv\/bxmxVYJvZZDB0M0ZNbjNgS4\/M\/jtYIz\/LBT\/Q\/2bO\/DpgNy\/NQjZQB";
   l.parentNode.insertBefore(s, l);
-  })({})
+  })()
   </script>
 
 </body>
